# AI-PDFReader

./: README.md  output.txt  package.json  pnpm-lock.yaml  tsconfig.json
.github/workflows/: main.yml
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/commands/audiocontrol/: mod.rs
src-tauri/src/commands/loadpdf/: mod.rs
src-tauri/src/commands/readpdf/: mod.rs
src/components/: ReadPdf.tsx  pdfViewer.tsx
src/pages/: Home.tsx  PdfDisplay.tsx
