[package]
name = "pdfaireader"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
window-shadows = "0.2.2"
tauri-plugin-fs-extra = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri = { version = "1", features = [ "protocol-all", "dialog-all", "path-all", "fs-all", "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lopdf = {version = "0.26", default-features = false, features = ["nom_parser"],git = "https://github.com/enzingerm/lopdf" }
pdf-extract = {version="0.7.2", git = "https://github.com/JustBobinAround/pdf-extract-per-page"}
tts = "0.26.0"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
